@@ -1,48 +1,71 @@
 package com.catalogo.catalogo_eventos.infrastructure.exception;
 
-import com.catalogo.catalogo_eventos.domain.exception.BusinessRuleException;
-import com.catalogo.catalogo_eventos.domain.exception.DomainValidationException;
-import jakarta.validation.ConstraintViolationException;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
-import org.springframework.web.method.annotation.MethodArgumentTypeMismatchException;
-
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
-@ControllerAdvice
+import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.http.converter.HttpMessageNotReadableException;
+import org.springframework.validation.FieldError;
+import org.springframework.web.bind.MethodArgumentNotValidException;
+import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.bind.annotation.RestControllerAdvice;
+import org.springframework.web.context.request.WebRequest;
+
+import com.catalogo.catalogo_eventos.domain.exception.BusinessRuleException;
+
+@RestControllerAdvice
 public class GlobalExceptionHandler {
 
+    @ExceptionHandler(NotFoundException.class)
+    public ResponseEntity<ApiError> handleNotFound(NotFoundException ex) {
+        ApiError error = new ApiError(HttpStatus.NOT_FOUND.value(), ex.getMessage(), LocalDateTime.now(), Collections.emptyList());
+        return ResponseEntity.status(HttpStatus.NOT_FOUND).body(error);
+    }
+
+    @ExceptionHandler(ConflictException.class)
+    public ResponseEntity<ApiError> handleConflict(ConflictException ex) {
+        ApiError error = new ApiError(HttpStatus.CONFLICT.value(), ex.getMessage(), LocalDateTime.now(), Collections.emptyList());
+        return ResponseEntity.status(HttpStatus.CONFLICT).body(error);
+    }
+
     @ExceptionHandler(BusinessRuleException.class)
-    public ResponseEntity<ApiError> handleBusinessRule(BusinessRuleException ex){
-        ApiError err = new ApiError(LocalDateTime.now(), HttpStatus.CONFLICT.value(), "Validation error", List.of(ex.getMessage()), "");
-        return ResponseEntity.status(HttpStatus.CONFLICT).body(err);
+    public ResponseEntity<ApiError> handleBusiness(BusinessRuleException ex) {
+        ApiError error = new ApiError(HttpStatus.BAD_REQUEST.value(), ex.getMessage(), LocalDateTime.now(), Collections.emptyList());
+        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(error);
     }
 
-    @ExceptionHandler(DomainValidationException.class)
-    public ResponseEntity<ApiError> handleDomainValidation(DomainValidationException ex) {
-        ApiError err = new ApiError(LocalDateTime.now(), HttpStatus.BAD_REQUEST.value(), "Validation error", List.of(ex.getMessage()), "");
-        return ResponseEntity.badRequest().body(err);
+    @ExceptionHandler(MethodArgumentNotValidException.class)
+    protected ResponseEntity<Object> handleValidation(MethodArgumentNotValidException ex, WebRequest request) {
+        List<String> errors = ex.getBindingResult()
+                .getAllErrors()
+                .stream()
+                .map(err -> {
+                    if (err instanceof FieldError) {
+                        FieldError fe = (FieldError) err;
+                        return fe.getField() + ": " + fe.getDefaultMessage();
+                    } else {
+                        return err.getDefaultMessage();
+                    }
+                })
+                .collect(Collectors.toList());
+
+        ApiError error = new ApiError(HttpStatus.BAD_REQUEST.value(), "Validation error", LocalDateTime.now(), errors);
+        return new ResponseEntity<>(error, new HttpHeaders(), HttpStatus.BAD_REQUEST);
     }
 
-    @ExceptionHandler(ConstraintViolationException.class)
-    public ResponseEntity<ApiError> handleConstraint(ConstraintViolationException ex) {
-        List<String> msgs = ex.getConstraintViolations().stream().map(cv -> cv.getMessage()).collect(Collectors.toList());
-        ApiError err = new ApiError(LocalDateTime.now(), HttpStatus.BAD_REQUEST.value(), "Validation error", msgs, "");
-        return ResponseEntity.badRequest().body(err);
-    }
-
-    @ExceptionHandler(MethodArgumentTypeMismatchException.class)
-    public ResponseEntity<ApiError> handleTypeMismatch(MethodArgumentTypeMismatchException ex) {
-        ApiError err = new ApiError(LocalDateTime.now(), HttpStatus.BAD_REQUEST.value(), "Type mismatch", List.of(ex.getMessage()), "");
-        return ResponseEntity.badRequest().body(err);
+    @ExceptionHandler(HttpMessageNotReadableException.class)
+    public ResponseEntity<ApiError> handleInvalidFormat(HttpMessageNotReadableException ex) {
+        ApiError error = new ApiError(HttpStatus.BAD_REQUEST.value(), "Malformed JSON request", LocalDateTime.now(), Collections.emptyList());
+        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(error);
     }
 
     @ExceptionHandler(Exception.class)
-    public ResponseEntity<ApiError> handleGeneric(Exception ex) {
-        ApiError err = new ApiError(LocalDateTime.now(), HttpStatus.INTERNAL_SERVER_ERROR.value(), "Internal error", List.of(ex.getMessage()), "");
-        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(err);
+    public ResponseEntity<ApiError> handleAll(Exception ex) {
+        ApiError error = new ApiError(HttpStatus.INTERNAL_SERVER_ERROR.value(), "Internal server error", LocalDateTime.now(), Collections.singletonList(ex.getMessage()));
+        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(error);
     }
 }
